unpackaged/main/default/objects/Reservation__c/fields/Check_IN_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_IN_Date__c</fullName>
    <inlineHelpText>Enter the date when you are going to check in the hotel.</inlineHelpText>
    <label>Check IN Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>