unpackaged/main/default/objects/Reservation__c/fields/Check_OUT_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_OUT_Date__c</fullName>
    <inlineHelpText>Enter the date you want to check out from the hotel.</inlineHelpText>
    <label>Check OUT Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>