unpackaged/main/default/objects/Reservation__c/fields/Date_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Booking__c</fullName>
    <inlineHelpText>Enter the date of the booking.</inlineHelpText>
    <label>Date of Booking</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>