unpackaged/main/default/objects/Reservation__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Total Amount to be paid by the guest at the time of checkout.</description>
    <formula>Room__r.Price_of_the_Room__c  *  Total_Number_of_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount to be paid by the guest at the time of checkout.</inlineHelpText>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>