unpackaged/main/default/objects/Reservation__c/fields/Type_of_ID__c.field-meta.xml
<CustomField>
    <fullName>Type_of_ID__c</fullName>
    <label>Type of ID</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driving Licence</fullName>
            </value>
            <value>
                <fullName>Voter ID</fullName>
            </value>
            <value>
                <fullName>Aadhaar Card</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>