unpackaged/main/default/objects/Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Email_ID__c</columns>
    <columns>Room__c</columns>
    <columns>Check_Out__c</columns>
    <columns>Check_IN_Date__c</columns>
    <columns>Check_OUT_Date__c</columns>
    <columns>Total_Number_of_Days__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>